# projects

./: .gitignore  jsonValues.json  package-lock.json  package.json  pom.xml  precipitationGridCells.json  test_wgs84_nearest.tif
.github/workflows/: compile.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx
dmiProject/: .gitignore
dmiProject/client/: README.md  vite.config.js
dmiProject/server/: README.md
gridExtension/: README.md  dune-project
gridExtension/data/: arrayconstructs.pddl  domain-mini.pddl  domain-no-inferred.pddl  domain.pddl  problem.pddl  problem_grid.pddl  repeatmultoption.pddl
gridExtension/lib/: ast.ml  ast_transformer.ml  pddl_printer.ml  problem_generator.ml  utils.ml
gridExtension/test/ast_transformer_tests/: dune  test_generate_horizontal.ml  test_generate_vertical.ml
gridExtension/test/constructs_tests/: expected_mult.pddl  mult_rows.pddl  normal_rows.pddl  test_row_conversion.ml
gridExtension/test/lexer_tests/: lexer_test.ml
languagesAndCompilers/P4/: .gitignore  PLANNER_SETUP.md  README.md
minibank/: MiniBank.slnx  Program.cs  dockercommand  minibank.csproj  query.sql
minibank/Migrations/: 20260630095858_InitialCreate.Designer.cs  20260630095858_InitialCreate.cs  20260701124743_FixTransaction.Designer.cs  20260701124743_FixTransaction.cs  BankContextModelSnapshot.cs
minibank/Tests/: Tests.csproj  UnitTest1.cs
minibank/data/: BankContext.cs
minibank/models/: Account.cs  Transaction.cs
minibank/services/: Bank.cs
server/: README.md  pom.xml
(+142 files in other folders)
